# generative-models

./: .gitignore  README.md  pyproject.toml  setup.cfg
notebooks/drug-discovery/autoencoder/: conv-vq-vae.ipynb  modules.py
notebooks/drug-discovery/transformer/: torch-pat.ipynb  torch-vanilla-transformer.ipynb
qumedl/models/activations/: __init__.py  new_gelu.py
qumedl/models/autoencoder/vqvae/: __init__.py  base.py  conv1d.py  decoder.py  encoder.py
qumedl/models/layers/: __init__.py  add.py  concatenate.py  pe.py  projection.py  repeat.py  residual.py
qumedl/models/priors/: __init__.py  gaussian.py  qcbm.py
qumedl/models/recurrent/: __init__.py  lstm.py  pal.py
qumedl/models/transformer/: loss_functions.py  pat.py  transformer.py  transformerCustom.py  transformer_d.py  utils.py
qumedl/mol/encoding/: encoding.py  selfies_.py
qumedl/training/: collator.py  tensor_batch.py  utils.py
scripts/: compund_list.ipynb  compund_list.py  download_zinc15.py  draw_ligans.ipynb  pat_version.py  pat_version_custom.py  pat_version_new_cost.py  qPat_optuna.py  qPat_version.py  qPat_version_no_prior.py  qPat_version_pv2.py  qPat_version_rbm.py  qPat_version_rbm_new_cost.py  qPat_version_rbm_optuna.py  qcbm_list.csv  qcbm_lstm_version_sara.py  qdrug_chem42_parallel_pal.py  submit_transformer.sh  test_diversity.ipynb  test_diversity_large_tr.ipynb  zinc-15-txt-to-csv.py
scripts/transformer/: train_pat.py  train_transformer.py
scripts/vqvae/: sweep-config.yaml  train-vqvae-with-latent-transformer.py  vqvae-selfies-wandb-sweep-python.py
(+6 files in other folders)
