[build-system]
requires = [
    # The pin is a workaround for editable installs breaking IDEs.
    # See this mypy issue: https://github.com/python/mypy/issues/13392#issuecomment-1213527559
    # and our note: https://zapatacomputing.atlassian.net/wiki/spaces/ORQSRUN/pages/519012482/Editable+installs
    "setuptools<=63", 
    "wheel", 
    "setuptools_scm>=6.0"
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| data
)/
'''