[metadata]
name = qumedl
version = 0.0.1
description = "Quantum Assisted Deep Learning for Medical Applications"

[options]
packages = qumedl
install_requires = 
    torch~=2.1.0
    numpy~=1.26.0
    rich
    trogon
    cloudpickle
    selfies
    tqdm
    wandb
    einops 

[options.extras_require]
dev = 
    black
    isort